Time: 7 ms (31.66%), Space: 43.9 MB (92.91%) - LeetHub